Create final and test base components

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>React Email</title>
 </head>
-<body>
-  <div id="root"></div>
+<body style="width: 100%; padding: 0; margin: 0;">
+  <div id="root" style="width: 100%; padding: 0; margin: 0;"></div>
   <script src="./index.js"></script>
 </body>
 </html>
